refactor folders